reel.css
/* ... */
.reel-promo__article-content {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: center;
  width: 100%;
  height: 100%;
  margin-top: 78.8px;
}

.reel-promo__image-cell {
  position: relative;
  width: 61.8%;
  aspect-ratio: 1 / 1;
}

.reel-promo__image-content {
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;
}

.reel-promo__text-cell {
  margin-bottom: 10.0%;
}

.reel-promo__text-content {
  text-align: center;
  margin-top: 30.6px;
  padding: 0 6%;
}


.reel-promo__text-content h1 {
  margin-bottom: 3.0vh;
  font-size: 1.6rem;
}

.reel-promo__text-content p {
  font-size: 1.1rem;
}

.reel-promo__article-container--selection .reel-promo__text-content h1 {
  margin-bottom: 17.7px;
  font-size: 1.5rem;
}

.reel-promo__article-container--selection .reel-promo__text-content p {
  font-size: 1.1rem;
}

.reel-promo__title-content {
  outline: 2px solid green;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 15%;
  margin-bottom: 4%;
  background-color: #e4fffc;
}

.reel-promo__title-content h1 {
  font-size: 3.7rem;
}


.reel-promo__navi-container {
  display: flex;
  justify-content: center;
  width: 46%;
  height: 69px;
  align-items: center;
}

.reel-promo__navi-content {
  display: flex;
  justify-content: center;
  width: 48.6%;
  height: 79%;
  position: relative;
  align-items: center;
  gap: 4.6%;
}

.reel-promo__navi-dir-button {
  all: unset;
  font-size: 3.0rem;
}

.reel-promo__navi-dir-button--left {
  /*! position: absolute; */
  /*! left: 28.5%; */
  width: max-content;
  height: max-content;
  width: 20px;
  height: 20px;
  border: 3px solid black;
  border-left: none;
  border-top: none;
  background: transparent;
  cursor: pointer;
  transform: rotate(135deg);
  margin: var(--margin-leftright);
}

.reel-promo__navi-dir-button--right {
  /*! position: absolute; */
  /*! right: 28.5%; */
  width: 20px;
  height: 20px;
  border: 3px solid black;
  border-top-width: 3px;
  border-top-style: solid;
  border-top-color: black;
  border-left-width: 3px;
  border-left-style: solid;
  border-left-color: black;
  border-left: none;
  border-top: none;
  background: transparent;
  cursor: pointer;
  transform: rotate(-45deg);
  margin: var(--margin-leftright);
}

.reel-promo__navi-dir-button:hover {
  background-color: rgb(172, 172, 172);
}

.reel-promo__navi-dir-button:active {
  background-color: rgb(99, 98, 98);
}

.reel-promo__navi-mid-button {
  all: unset;
  background-color: whitesmoke;
  border: 1px solid black;
  transform: rotate(-45deg);
  width: 5.7px;
  aspect-ratio: 1 / 1;
}

.reel-promo__navi-mid-button:hover {
  background-color: black;
  border: 1px solid whitesmoke;
  cursor:pointer;
}

.reel-promo__navi-mid-button.active {
  background-color: black;
  border: 1px solid black;
}
/* ... */

